Fix nav burger menu overlap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -250,8 +250,8 @@ hr {
   .nav-links {
     position: absolute;
     right: 0;
-    height: 92vh;
-    top: 8vh;
+    height: calc(100vh - 75px);
+    top: 75px;
     background-color: #000;
     flex-direction: column;
     align-items: center;
